feat: add strategy profiles and implement trades page with filtering and export functionality
- Introduced StrategyProfile interface and predefined strategy profiles for trading strategies.
- Developed TradesPage component with trade history display, filtering options, and CSV export feature.
- Implemented Redux API slice for fetching trade history and integrated it with the TradesPage.
- Enhanced WebSocket middleware to invalidate trade history cache on relevant events.
- Updated testing suite to cover new TradesPage functionality and ensure proper rendering and interaction.
- Improved development scripts for easier setup and teardown of the local environment.