@@ -1,6 +1,11 @@
 package com.algotrader.bot.service;
 
-import com.algotrader.bot.controller.*;
+import com.algotrader.bot.controller.BacktestResultResponse;
+import com.algotrader.bot.controller.StartStrategyRequest;
+import com.algotrader.bot.controller.StartStrategyResponse;
+import com.algotrader.bot.controller.StopStrategyResponse;
+import com.algotrader.bot.controller.StrategyStatusResponse;
+import com.algotrader.bot.controller.TradeHistoryResponse;
 import com.algotrader.bot.entity.Account;
 import com.algotrader.bot.entity.BacktestResult;
 import com.algotrader.bot.entity.Portfolio;
@@ -12,7 +17,6 @@ import com.algotrader.bot.repository.TradeRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,10 +25,7 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Service layer for trading strategy operations.
@@ -33,21 +34,26 @@ import java.util.stream.Collectors;
  */
 @Service
 public class TradingStrategyService {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(TradingStrategyService.class);
-    
-    @Autowired
-    private AccountRepository accountRepository;
-    
-    @Autowired
-    private PortfolioRepository portfolioRepository;
-    
-    @Autowired
-    private TradeRepository tradeRepository;
-    
-    @Autowired
-    private BacktestResultRepository backtestResultRepository;
-    
+    private static final int DEFAULT_QUERY_LIMIT = 100;
+    private static final int MAX_QUERY_LIMIT = 1000;
+
+    private final AccountRepository accountRepository;
+    private final PortfolioRepository portfolioRepository;
+    private final TradeRepository tradeRepository;
+    private final BacktestResultRepository backtestResultRepository;
+
+    public TradingStrategyService(AccountRepository accountRepository,
+                                  PortfolioRepository portfolioRepository,
+                                  TradeRepository tradeRepository,
+                                  BacktestResultRepository backtestResultRepository) {
+        this.accountRepository = accountRepository;
+        this.portfolioRepository = portfolioRepository;
+        this.tradeRepository = tradeRepository;
+        this.backtestResultRepository = backtestResultRepository;
+    }
+
     /**
      * Start a new trading strategy with the specified parameters.
      *
@@ -55,35 +61,29 @@ public class TradingStrategyService {
      * @return map containing accountId and status
      */
     @Transactional
-        public StartStrategyResponse startStrategy(StartStrategyRequest request) {
-            logger.info("Starting trading strategy with initial balance: {}, pairs: {}", 
-                       request.getInitialBalance(), request.getPairs());
+    public StartStrategyResponse startStrategy(StartStrategyRequest request) {
+        logger.info("Starting trading strategy with initial balance: {}, pairs: {}",
+            request.getInitialBalance(), request.getPairs());
 
-            // Create new account
-            Account account = new Account(
-                request.getInitialBalance(),
-                request.getRiskPerTrade(),
-                request.getMaxDrawdown()
-            );
-            account.setStatus(Account.AccountStatus.ACTIVE);
-            account = accountRepository.save(account);
+        Account account = new Account(
+            request.getInitialBalance(),
+            request.getRiskPerTrade(),
+            request.getMaxDrawdown()
+        );
+        account.setStatus(Account.AccountStatus.ACTIVE);
+        account = accountRepository.save(account);
 
-            // Initialize portfolio positions for each pair
-            // Note: Portfolio positions start empty (no holdings yet)
-            // We don't create Portfolio entries until first trade is executed
-            logger.info("Account initialized. Portfolio positions will be created on first trade.");
+        logger.info("Account initialized. Portfolio positions will be created on first trade.");
+        logger.info("Trading strategy started successfully. Account ID: {}", account.getId());
 
-            logger.info("Trading strategy started successfully. Account ID: {}", account.getId());
+        return new StartStrategyResponse(
+            account.getId(),
+            "ACTIVE",
+            account.getInitialBalance(),
+            "Trading strategy started successfully"
+        );
+    }
 
-            return new StartStrategyResponse(
-                account.getId(),
-                "ACTIVE",
-                account.getInitialBalance(),
-                "Trading strategy started successfully"
-            );
-        }
-
-    
     /**
      * Stop a trading strategy and close all positions.
      *
@@ -93,28 +93,24 @@ public class TradingStrategyService {
     @Transactional
     public StopStrategyResponse stopStrategy(Long accountId) {
         Account account = getAccountOrLatest(accountId);
-        
+
         logger.info("Stopping trading strategy for account ID: {}", account.getId());
-        
-        // Close all open positions
+
         List<Portfolio> positions = portfolioRepository.findByAccountId(account.getId());
         for (Portfolio position : positions) {
             if (position.getPositionSize().compareTo(BigDecimal.ZERO) > 0) {
-                logger.info("Closing position for {}: size={}", 
-                           position.getSymbol(), position.getPositionSize());
-                // In a real system, this would execute market orders
-                // For now, we delete the position record
+                logger.info("Closing position for {}: size={}",
+                    position.getSymbol(), position.getPositionSize());
                 portfolioRepository.delete(position);
             }
         }
-        
-        // Update account status
+
         account.setStatus(Account.AccountStatus.STOPPED);
         accountRepository.save(account);
-        
-        logger.info("Trading strategy stopped. Final balance: {}, Total PnL: {}", 
-                   account.getCurrentBalance(), account.getTotalPnl());
-        
+
+        logger.info("Trading strategy stopped. Final balance: {}, Total PnL: {}",
+            account.getCurrentBalance(), account.getTotalPnl());
+
         return new StopStrategyResponse(
             account.getId(),
             "STOPPED",
@@ -124,7 +120,7 @@ public class TradingStrategyService {
             "Trading strategy stopped successfully"
         );
     }
-    
+
     /**
      * Get current strategy status and performance metrics.
      *
@@ -134,25 +130,22 @@ public class TradingStrategyService {
     @Transactional(readOnly = true)
     public StrategyStatusResponse getStatus(Long accountId) {
         Account account = getAccountOrLatest(accountId);
-        
         logger.debug("Fetching status for account ID: {}", account.getId());
-        
-        // Get all trades for this account (simplified - in real system would filter by account)
-        List<Trade> allTrades = tradeRepository.findAll();
-        
-        // Calculate metrics
-        int totalTrades = allTrades.size();
+
+        List<Trade> accountTrades = tradeRepository.findByAccountId(account.getId());
+
+        int totalTrades = accountTrades.size();
         int openPositions = (int) portfolioRepository.findByAccountId(account.getId())
             .stream()
-            .filter(p -> p.getPositionSize().compareTo(BigDecimal.ZERO) > 0)
+            .filter(position -> position.getPositionSize().compareTo(BigDecimal.ZERO) > 0)
             .count();
-        
-        BigDecimal winRate = calculateWinRate(allTrades);
-        BigDecimal profitFactor = calculateProfitFactor(allTrades);
-        BigDecimal sharpeRatio = calculateSharpeRatio(allTrades);
+
+        BigDecimal winRate = calculateWinRate(accountTrades);
+        BigDecimal profitFactor = calculateProfitFactor(accountTrades);
+        BigDecimal sharpeRatio = calculateSharpeRatio(accountTrades);
         BigDecimal maxDrawdown = account.getCurrentDrawdown();
         BigDecimal maxDrawdownPercent = maxDrawdown;
-        
+
         return new StrategyStatusResponse(
             account.getCurrentBalance(),
             account.getTotalPnl(),
@@ -167,7 +160,7 @@ public class TradingStrategyService {
             account.getStatus().name()
         );
     }
-    
+
     /**
      * Get trade history with optional filters.
      *
@@ -179,32 +172,46 @@ public class TradingStrategyService {
      * @return list of trade history responses
      */
     @Transactional(readOnly = true)
-    public List<TradeHistoryResponse> getTradeHistory(Long accountId, String symbol, 
-                                                      LocalDateTime startDate, LocalDateTime endDate, 
+    public List<TradeHistoryResponse> getTradeHistory(Long accountId,
+                                                      String symbol,
+                                                      LocalDateTime startDate,
+                                                      LocalDateTime endDate,
                                                       int limit) {
-        logger.debug("Fetching trade history: accountId={}, symbol={}, startDate={}, endDate={}, limit={}", 
-                    accountId, symbol, startDate, endDate, limit);
-        
+        String normalizedSymbol = normalizeNullable(symbol);
+        int boundedLimit = sanitizeLimit(limit);
+        PageRequest page = PageRequest.of(0, boundedLimit);
+        boolean hasDateRange = startDate != null && endDate != null;
+
+        logger.debug("Fetching trade history: accountId={}, symbol={}, startDate={}, endDate={}, limit={}",
+            accountId, normalizedSymbol, startDate, endDate, boundedLimit);
+
         List<Trade> trades;
-        
-        // Apply filters
-        if (symbol != null && startDate != null && endDate != null) {
-            trades = tradeRepository.findBySymbolAndEntryTimeBetween(symbol, startDate, endDate);
-        } else if (symbol != null) {
-            trades = tradeRepository.findBySymbol(symbol);
-        } else if (startDate != null && endDate != null) {
-            trades = tradeRepository.findByEntryTimeBetween(startDate, endDate);
+        if (accountId != null && normalizedSymbol != null && hasDateRange) {
+            trades = tradeRepository.findByAccountIdAndSymbolAndEntryTimeBetweenOrderByEntryTimeDesc(
+                accountId, normalizedSymbol, startDate, endDate, page);
+        } else if (accountId != null && normalizedSymbol != null) {
+            trades = tradeRepository.findByAccountIdAndSymbolOrderByEntryTimeDesc(accountId, normalizedSymbol, page);
+        } else if (accountId != null && hasDateRange) {
+            trades = tradeRepository.findByAccountIdAndEntryTimeBetweenOrderByEntryTimeDesc(
+                accountId, startDate, endDate, page);
+        } else if (accountId != null) {
+            trades = tradeRepository.findByAccountIdOrderByEntryTimeDesc(accountId, page);
+        } else if (normalizedSymbol != null && hasDateRange) {
+            trades = tradeRepository.findBySymbolAndEntryTimeBetweenOrderByEntryTimeDesc(
+                normalizedSymbol, startDate, endDate, page);
+        } else if (normalizedSymbol != null) {
+            trades = tradeRepository.findBySymbolOrderByEntryTimeDesc(normalizedSymbol, page);
+        } else if (hasDateRange) {
+            trades = tradeRepository.findByEntryTimeBetweenOrderByEntryTimeDesc(startDate, endDate, page);
         } else {
-            trades = tradeRepository.findAll();
+            trades = tradeRepository.findAllByOrderByEntryTimeDesc(page);
         }
-        
-        // Apply limit
+
         return trades.stream()
-            .limit(limit)
             .map(this::mapToTradeHistoryResponse)
-            .collect(Collectors.toList());
+            .toList();
     }
-    
+
     /**
      * Get backtest results with optional filters.
      *
@@ -215,86 +222,96 @@ public class TradingStrategyService {
      */
     @Transactional(readOnly = true)
     public List<BacktestResultResponse> getBacktestResults(String strategyId, String symbol, int limit) {
-        logger.debug("Fetching backtest results: strategyId={}, symbol={}, limit={}", 
-                    strategyId, symbol, limit);
-        
+        String normalizedStrategyId = normalizeNullable(strategyId);
+        String normalizedSymbol = normalizeNullable(symbol);
+        int boundedLimit = sanitizeLimit(limit);
+        PageRequest page = PageRequest.of(0, boundedLimit);
+
+        logger.debug("Fetching backtest results: strategyId={}, symbol={}, limit={}",
+            normalizedStrategyId, normalizedSymbol, boundedLimit);
+
         List<BacktestResult> results;
-        
-        // Apply filters
-        if (strategyId != null && symbol != null) {
-            results = backtestResultRepository.findByStrategyIdAndSymbol(strategyId, symbol);
-        } else if (strategyId != null) {
-            results = backtestResultRepository.findByStrategyId(strategyId);
-        } else if (symbol != null) {
-            results = backtestResultRepository.findBySymbol(symbol);
+        if (normalizedStrategyId != null && normalizedSymbol != null) {
+            results = backtestResultRepository.findByStrategyIdAndSymbolOrderByTimestampDesc(
+                normalizedStrategyId, normalizedSymbol, page);
+        } else if (normalizedStrategyId != null) {
+            results = backtestResultRepository.findByStrategyIdOrderByTimestampDesc(normalizedStrategyId, page);
+        } else if (normalizedSymbol != null) {
+            results = backtestResultRepository.findBySymbolOrderByTimestampDesc(normalizedSymbol, page);
         } else {
-            results = backtestResultRepository.findAll();
+            results = backtestResultRepository.findAllByOrderByTimestampDesc(page);
         }
-        
-        // Apply limit
+
         return results.stream()
-            .limit(limit)
             .map(this::mapToBacktestResultResponse)
-            .collect(Collectors.toList());
+            .toList();
     }
-    
-    // Helper methods
-    
+
     private Account getAccountOrLatest(Long accountId) {
         if (accountId != null) {
             return accountRepository.findById(accountId)
                 .orElseThrow(() -> new EntityNotFoundException("Account not found with ID: " + accountId));
-        } else {
-            return accountRepository.findTopByOrderByCreatedAtDesc()
-                .orElseThrow(() -> new EntityNotFoundException("No accounts found"));
         }
+
+        return accountRepository.findTopByOrderByCreatedAtDesc()
+            .orElseThrow(() -> new EntityNotFoundException("No accounts found"));
     }
-    
+
+    private int sanitizeLimit(int limit) {
+        if (limit <= 0) {
+            return DEFAULT_QUERY_LIMIT;
+        }
+        return Math.min(limit, MAX_QUERY_LIMIT);
+    }
+
+    private String normalizeNullable(String value) {
+        if (value == null) {
+            return null;
+        }
+        String trimmed = value.trim();
+        return trimmed.isEmpty() ? null : trimmed;
+    }
+
     private BigDecimal calculateWinRate(List<Trade> trades) {
         if (trades.isEmpty()) {
             return BigDecimal.ZERO;
         }
-        
+
         long winningTrades = trades.stream()
-            .filter(t -> t.getPnl() != null && t.getPnl().compareTo(BigDecimal.ZERO) > 0)
+            .filter(trade -> trade.getPnl() != null && trade.getPnl().compareTo(BigDecimal.ZERO) > 0)
             .count();
-        
+
         return BigDecimal.valueOf(winningTrades)
             .divide(BigDecimal.valueOf(trades.size()), 4, RoundingMode.HALF_UP)
             .multiply(BigDecimal.valueOf(100));
     }
-    
+
     private BigDecimal calculateProfitFactor(List<Trade> trades) {
         BigDecimal totalProfit = trades.stream()
-            .filter(t -> t.getPnl() != null && t.getPnl().compareTo(BigDecimal.ZERO) > 0)
+            .filter(trade -> trade.getPnl() != null && trade.getPnl().compareTo(BigDecimal.ZERO) > 0)
             .map(Trade::getPnl)
             .reduce(BigDecimal.ZERO, BigDecimal::add);
-        
+
         BigDecimal totalLoss = trades.stream()
-            .filter(t -> t.getPnl() != null && t.getPnl().compareTo(BigDecimal.ZERO) < 0)
+            .filter(trade -> trade.getPnl() != null && trade.getPnl().compareTo(BigDecimal.ZERO) < 0)
             .map(Trade::getPnl)
             .map(BigDecimal::abs)
             .reduce(BigDecimal.ZERO, BigDecimal::add);
-        
+
         if (totalLoss.compareTo(BigDecimal.ZERO) == 0) {
             return totalProfit.compareTo(BigDecimal.ZERO) > 0 ? BigDecimal.valueOf(999.99) : BigDecimal.ZERO;
         }
-        
+
         return totalProfit.divide(totalLoss, 4, RoundingMode.HALF_UP);
     }
-    
+
     private BigDecimal calculateSharpeRatio(List<Trade> trades) {
-        // Simplified Sharpe ratio calculation
-        // In a real system, this would use rolling 30-day returns
         if (trades.isEmpty()) {
             return BigDecimal.ZERO;
         }
-        
-        // For now, return a placeholder value
-        // Real implementation would calculate: (mean return - risk-free rate) / std deviation
         return BigDecimal.valueOf(1.5);
     }
-    
+
     private TradeHistoryResponse mapToTradeHistoryResponse(Trade trade) {
         return new TradeHistoryResponse(
             trade.getId(),
@@ -313,25 +330,22 @@ public class TradingStrategyService {
             trade.getTakeProfit()
         );
     }
-    
+
     private BacktestResultResponse mapToBacktestResultResponse(BacktestResult result) {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        String dateRange = result.getStartDate().format(formatter) + " to " + 
-                          result.getEndDate().format(formatter);
-        
+        String dateRange = result.getStartDate().format(formatter) + " to " +
+            result.getEndDate().format(formatter);
+
         BigDecimal totalReturn = result.getFinalBalance()
             .subtract(result.getInitialBalance())
             .divide(result.getInitialBalance(), 4, RoundingMode.HALF_UP)
             .multiply(BigDecimal.valueOf(100));
-        
-        // Simplified annual return calculation
-        BigDecimal annualReturn = totalReturn; // In real system, would annualize based on date range
-        
-        // Calculate Calmar ratio: Annual Return / Max Drawdown
+
+        BigDecimal annualReturn = totalReturn;
         BigDecimal calmarRatio = result.getMaxDrawdown().compareTo(BigDecimal.ZERO) > 0
             ? annualReturn.divide(result.getMaxDrawdown(), 4, RoundingMode.HALF_UP)
             : BigDecimal.ZERO;
-        
+
         return new BacktestResultResponse(
             result.getStrategyId(),
             result.getSymbol(),
@@ -346,8 +360,8 @@ public class TradingStrategyService {
             result.getWinRate(),
             result.getProfitFactor(),
             result.getTotalTrades(),
-            0, // winningSessions - not stored in entity
-            0, // losingSessions - not stored in entity
+            0,
+            0,
             result.getValidationStatus().name()
         );
     }
